RESOLVED FIXED 271049
[Skia] Fix font style values passed to matchFamilyStyle
https://bugs.webkit.org/show_bug.cgi?id=271049
Summary [Skia] Fix font style values passed to matchFamilyStyle
Carlos Garcia Campos
Reported 2024-03-15 03:34:23 PDT
We are doing a very simple conversion, but we should check values and thresholds.
Attachments
Carlos Garcia Campos
Comment 1 2024-03-15 03:36:15 PDT
EWS
Comment 2 2024-03-15 05:16:53 PDT
Committed 276149@main (7600623697cb): <https://commits.webkit.org/276149@main> Reviewed commits have been landed. Closing PR #25937 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-03-15 05:17:13 PDT
Note You need to log in before you can comment on or make changes to this bug.