[Skia] Fix font style values passed to matchFamilyStyle https://bugs.webkit.org/show_bug.cgi?id=271049

Reviewed by Alejandro G. Castro.

We are doing a very simple conversion, but we should check values and
thresholds.

* Source/WebCore/platform/graphics/skia/FontCacheSkia.cpp:
(WebCore::skiaFontStyle):
(WebCore::FontCache::createFontPlatformData):

Canonical link: https://commits.webkit.org/276149@main